﻿Revision history for {{$dist->name}}

{{$NEXT}}
 [Dependencies::Stats]
 - Dependencies changed since 2.025001, see misc/*.deps* for details
 - runtime: ↑1

2.025001 2015-07-05T03:52:11Z 31e79e3
 [Bugfix]
 - Use a newer contributing module in pre-emption of ether accepting my patch

 [Dependencies::Stats]
 - Dependencies changed since 2.025000, see misc/*.deps* for details
 - develop: ↑1
 - runtime: ↑1

 [Note]
 - I really hate having so many plugins, and I really hate everyone needing my bundle
 - But I also hate anyone needing my bundle.

 [Todo]
 - Have a system where more static stuff happens at a dedicated phases instead of part of the build cycle
 - Not have contributors need to execute that to simply refresh files that are already there.

2.025000 2015-06-30T02:35:26Z 8f4450c
 [00 Features]
 - copyfiles now copies LICENSE and Makefile.PL by default.
 - RemovePrereqs::Provided is now standard issue.
 - default_branch now specified for headless Git::NextRelease
 - Inject a CONTRIBUTING document standard

 [Dependencies::Stats]
 - Dependencies changed since 2.024002, see misc/*.deps* for details
 - develop: +1 (suggests: -1)
 - runtime: +2

2.024002 2015-06-21T22:23:14Z b786cb3
 [Dependencies::Stats]
 - Dependencies changed since 2.024001, see misc/*.deps* for details
 - develop: +2 -2 (suggests: ↑2)
 - runtime: +1 -1

 [Minor]
 - Now uses MetaYAML::Minimal to generate a reduced META.yml

2.024001 2015-03-01T10:38:03Z 57fafd2
 [Bugfix]
 - Closing the loop with inherently co-depedendent changes.

 [Dependencies::Stats]
 - Dependencies changed since 2.024000, see misc/*.deps* for details
 - develop: +1 ↑2 (suggests: ↑1)
 - runtime: ↑2
 - test: ↑1

2.024000 2015-02-28T17:36:05Z ffe5dea
 [Compatibility Breaking Changes]
 - CommitBuild now builds to 'builds' regardless what branch you're on. This is mostly to negate hassle  involved with
   working on multiple branches blocking activity due to 'dzil build' doing the wrong thing and creating new, disjoint