@@ -2,7 +2,7 @@
 use strict;
 use warnings;
 
-use 5.008;
+use 5.006;
 
 use ExtUtils::MakeMaker;
 
@@ -22,7 +22,7 @@ my %WriteMakefileArgs = (
   "DISTNAME" => "Dist-Zilla-PluginBundle-Author-KENTNL",
   "EXE_FILES" => [],
   "LICENSE" => "perl",
-  "MIN_PERL_VERSION" => "5.008",
+  "MIN_PERL_VERSION" => "5.006",
   "NAME" => "Dist::Zilla::PluginBundle::Author::KENTNL",
   "PREREQ_PM" => {
     "Carp" => 0,
@@ -90,7 +90,6 @@ my %WriteMakefileArgs = (
     "String::Formatter" => 0,
     "namespace::autoclean" => 0,
     "strict" => 0,
-    "utf8" => 0,
     "version" => 0,
     "warnings" => 0
   },
@@ -209,7 +208,6 @@ my %FallbackPrereqs = (
   "lib" => 0,
   "namespace::autoclean" => 0,
   "strict" => 0,
-  "utf8" => 0,
   "version" => 0,
   "warnings" => 0
 );
