@@ -1,8 +1,18 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 2.025002
+ [Changed / configure requires]
+ - perl 5.008 → 5.006
+
  [Changed / runtime requires]
  - Dist::Zilla::Plugin::MinimumPerl 0 → 1.004
+ - perl 5.008 → 5.006
+
+ [Changed / test requires]
+ - perl 5.008 → 5.006
+
+ [Removed / runtime requires]
+ - utf8
 
 2.025001 2015-07-05T03:52:11Z
  [Changed / develop requires]
